--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
     color: white;
     padding-top: 4%;
     padding-left: 6%;
+    text-align: left;
 }
 .content-container{
     padding-top: 5%;
